<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_neighbour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.ProfilNeighbourActivity">


    <ImageView
...
        android:textSize="32sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/profil_neighbour_image"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@id/profil_neighbour_image"
...
